feat: Cria as controllers e as views

--- a/CleanArchMvc.WebUI/appsettings.json
+++ b/CleanArchMvc.WebUI/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=VANDO; Database=CleanArchDb; Integrated Security=true;TrustServerCertificate=true"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
